--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -19,9 +19,11 @@
           %ul.nav.navbar-nav.navbar-right
             %li.dropdown
               %a.dropdown-toggle{"aria-expanded" => "false", "data-toggle" => "dropdown", :href => "#", :role => "button"}
-                UserName
+                =current_user.nickname
                 %span.caret
               %ul.dropdown-menu{:role => "menu"}
+                %li
+                  =link_to 'My Profile', user_path(current_user.id)
                 %li
                   =link_to 'Profile Edit', edit_user_path(current_user.id)
                 %li
