fix some for page of tags

--- a/app/views/prototypes/newest.html.haml
+++ b/app/views/prototypes/newest.html.haml
@@ -1,1 +1,2 @@
-=render partial: 'prototype', locals: {prototypes: @prototypes, type: 1}
+=render partial: 'prototypes/prototype_header', locals: {type: 1}
+=render partial: 'prototype', locals: {prototypes: @prototypes}
