--- a/app/views/tags/show.html.haml
+++ b/app/views/tags/show.html.haml
@@ -1,1 +1,2 @@
-=render partial: 'prototypes/prototype', locals: {prototypes: @prototypes, type: 2}
+=render partial: 'prototypes/prototype_header', locals: {type: 2}
+=render partial: 'prototypes/prototype', locals: {prototypes: @prototypes}
