--- a/app/views/prototypes/index.html.haml
+++ b/app/views/prototypes/index.html.haml
@@ -1,1 +1,2 @@
-=render partial: 'prototype', locals: {prototypes: @prototypes, type: 0}
+=render partial: 'prototype_header', locals: {type: 0}
+=render partial: 'prototype', locals: {prototypes: @prototypes}
