fix some for prototypes, new

--- a/app/views/prototypes/index.html.haml
+++ b/app/views/prototypes/index.html.haml
@@ -1,2 +1,6 @@
 =render partial: 'prototype_header', locals: {type: 0}
-=render partial: 'prototype', locals: {prototypes: @prototypes}
+.container.proto-list
+  .row
+    =render partial: 'prototype', collection: @prototypes
+.text-center
+  =paginate(@prototypes)
