--- a/app/views/prototypes/_prototype_header.html.haml
+++ b/app/views/prototypes/_prototype_header.html.haml
@@ -8,5 +8,5 @@
         %li{role: "presentation", class: "#{'active' if type == 0}"}
           =link_to 'Popular PROTO', root_path
         %li{role: "presentation", class: "#{'active' if type == 1}"}
-          =link_to 'Newest PROTO', newest_prototypes_path
+          =link_to 'Newest PROTO', prototypes_newest_index_path
       =link_to "View Tags", tags_path, class: "btn btn-default col-lg-1"
