--- a/app/views/prototypes/new.html.haml
+++ b/app/views/prototypes/new.html.haml
@@ -9,31 +9,23 @@
       .col-md-12
         =f.text_field :title, placeholder: "Title", class: "proto-new-title"
         .row
-          -i=0
           =f.fields_for :prototype_images do |p|
-            -if i==0
-              .col-md-12
-                .cover-image-upload
-                  =p.file_field :image
-                  =p.hidden_field :status, value: 0
-                  -i+=1
-            -else
-              =surround(i==1?"<div class='col-md-12'><ul class='proto-sub-list list-group'>".html_safe : "", i==3?"</ul></div>".html_safe : "") do
-                -if i==1 || i==2
-                  %li.list-group-item.col-md-4
-                    .image-upload
-                      =p.file_field :image
-                      =p.hidden_field :status, value: 1
-                      -i+=1
-                -elsif i==3
-                  %li.list-group-item.col-md-4
-                    .image-upload
-                      =p.file_field :image
-                      =p.hidden_field :status, value: 1
-                      -i+=1
-                  %li.list-group-item.col-md-4{style: "display:none;"}
-                    .image-upload-plus
-                      %span +
+            .col-md-12
+              .cover-image-upload
+                =p.file_field :image
+                =p.hidden_field :status, value: 0
+            .col-md-12
+              %ul.proto-sub-list.list-group
+                -3.times do |i|
+                  =f.fields_for :prototype_images do |p|
+                    %li.list-group-item.col-md-4
+                      .image-upload
+                        =p.file_field :image
+                        =p.hidden_field :status, value: 1
+                    -if i==2
+                      %li.list-group-item.col-md-4{style: "display:none;"}
+                        .image-upload-plus
+                          %span +
       .row.proto-description
         .col-md-12
           =f.text_field :catch_copy, placeholder: "Catch Copy"
