--- a/app/views/prototypes/_prototype.html.haml
+++ b/app/views/prototypes/_prototype.html.haml
@@ -1,7 +1,7 @@
 .col-sm-4.col-md-3.proto-content
   .thumbnail
     %a{:href => "/prototypes/#{prototype.id}"}
-      = image_tag("#{prototype.prototype_images.first.image}")
+      = image_tag("#{prototype.prototype_images.first.name}")
     .caption
       %h3 #{prototype.title}
       .proto-meta
