fix 'register tag', 'notice message'

--- a/app/assets/stylesheets/protospace.css.scss
+++ b/app/assets/stylesheets/protospace.css.scss
@@ -595,3 +595,12 @@ body {
   }
 }
 
+/*-- Add for my proto-space ---------------------------------- */
+.top-alert{
+  top: 93px;
+  position: fixed;
+  width: 100%;
+  z-index: 1030;
+}
+
+
