--- a/app/views/prototypes/new.html.haml
+++ b/app/views/prototypes/new.html.haml
@@ -35,10 +35,10 @@
           %h4 Tag List
           .row
             .col-md-3
-              = f.text_field :tag1, placeholder: "Web Design"
+              = text_field_tag "prototype[tag_list][]", "", placeholder: "Web Design"
             .col-md-3
-              = f.text_field :tag2, placeholder: "UI"
+              = text_field_tag "prototype[tag_list][]", "", placeholder: "UI"
             .col-md-3
-              = f.text_field :tag3, placeholder: "Application"
+              = text_field_tag "prototype[tag_list][]", "", placeholder: "Application"
       .row.text-center.proto-btn
         %button.btn.btn-lg.btn-primary.btn-block{:type => "submit"} Publish
