--- a/app/views/prototypes/_prototype.html.haml
+++ b/app/views/prototypes/_prototype.html.haml
@@ -1,9 +1,9 @@
 .col-sm-4.col-md-3.proto-content
   .thumbnail
-    %a{:href => "/prototypes/#{prototype.id}"}
-      = image_tag("#{prototype.prototype_images.first.name}")
+    =link_to prototype_path(prototype) do
+      = image_tag main_image(prototype)
     .caption
-      %h3 #{prototype.title}
+      %h3= prototype.title
       .proto-meta
         .proto-user
           = link_to "by #{prototype.user.nickname}", user_path(prototype.user.id)
