--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,9 +8,9 @@
     = csrf_meta_tags
   %body
     = render "layouts/header"
-    - unless flash[:notice].nil?
-      .alert.alert-success.top-alert #{flash[:notice]}
-    - unless flash[:alert].nil?
-      .alert.alert-danger.top-alert #{flash[:alert]}
+    - flash.each do |key, value|
+      - key = "info" if key == "notice"
+      - key = "danger"  if key == "alert"
+      = content_tag :div, value, class: "alert alert-#{key} top-alert"
     = yield
     = render "layouts/footer"
