fix some about prototype header and so on

--- a/app/views/prototypes/newest/index.html.haml
+++ b/app/views/prototypes/newest/index.html.haml
@@ -1,4 +1,4 @@
-= render partial: 'prototypes/prototype_header', locals: { type: 1 }
+= render partial: 'prototypes/prototype_header'
 .container.proto-list
   .row
     = render partial: 'prototypes/prototype', collection: @prototypes
