--- a/app/views/tags/index.html.haml
+++ b/app/views/tags/index.html.haml
@@ -1,4 +1,4 @@
-= render partial: 'prototypes/prototype_header', locals: {type: 2}
+= render partial: 'prototypes/prototype_header'
 .container.proto-list
   .row
     - @tags.each do |tag|
