--- a/app/views/prototypes/index.html.haml
+++ b/app/views/prototypes/index.html.haml
@@ -1,4 +1,4 @@
-= render partial: 'prototype_header', locals: {type: 0}
+= render partial: 'prototype_header'
 .container.proto-list
   .row
     = render partial: 'prototype', collection: @prototypes
