--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,13 +2,13 @@
   %header.user-nav
     .media
       .media-left
-        %a{:href => "#"}
-          %img.media-object{:alt => "64x64", "data-holder-rendered" => "true", "data-src" => "holder.js/64x64", :src => "#{@user.avator}", :style => "width: 64px; height: 64px;"}/
+        = link_to user_path(@user) do
+          = image_tag @user.avator, width: "64px", height: "64px", alt: "#{@user.nickname}", class: "media-object"
       .media-body
         %h4#top-aligned-media.media-heading
-          Top aligned media
+          = @user.nickname
           %span.label.label-default.project-number
-            29
+            = @prototypes.count
             %i Projects
         .proto-user
           %span.degree #{@user.team}
@@ -21,135 +21,8 @@
             %p #{@user.work}
 .container.proto-list
   .row
-    .col-sm-4.col-md-3.proto-content
-      .thumbnail
-        %a{:href => ""}
-          = image_tag("sample.png")
-          .caption
-            %h3 Salvation Army on iPad App Wireframe
-            .proto-meta
-              .proto-date
-                Apr 26
-            %ul.proto-tag-list.list-inline
-              %li
-                %a{:href => "#", :class => "btn btn-default"} iPad
-              %li
-                %a{:href => "#", :class => "btn btn-default"} wireframe
-    .col-sm-4.col-md-3.proto-content
-      .thumbnail
-        %a{:href => ""}
-          = image_tag("sample.png")
-          .caption
-            %h3 Salvation Army on iPad App Wireframe
-            .proto-meta
-              .proto-date
-                Apr 26
-            %ul.proto-tag-list.list-inline
-              %li
-                %a{:href => "#", :class => "btn btn-default"} iPad
-              %li
-                %a{:href => "#", :class => "btn btn-default"} wireframe
-    .col-sm-4.col-md-3.proto-content
-      .thumbnail
-        %a{:href => ""}
-          = image_tag("sample.png")
-          .caption
-            %h3 Salvation Army on iPad App Wireframe
-            .proto-meta
-              .proto-date
-                Apr 26
-            %ul.proto-tag-list.list-inline
-              %li
-                %a{:href => "#", :class => "btn btn-default"} iPad
-              %li
-                %a{:href => "#", :class => "btn btn-default"} wireframe
-    .col-sm-4.col-md-3.proto-content
-      .thumbnail
-        %a{:href => ""}
-          = image_tag("sample.png")
-          .caption
-            %h3 Salvation Army on iPad App Wireframe
-            .proto-meta
-              .proto-date
-                Apr 26
-            %ul.proto-tag-list.list-inline
-              %li
-                %a{:href => "#", :class => "btn btn-default"} iPad
-              %li
-                %a{:href => "#", :class => "btn btn-default"} wireframe
-    .col-sm-4.col-md-3.proto-content
-      .thumbnail
-        %a{:href => ""}
-          = image_tag("sample.png")
-          .caption
-            %h3 Salvation Army on iPad App Wireframe
-            .proto-meta
-              .proto-date
-                Apr 26
-            %ul.proto-tag-list.list-inline
-              %li
-                %a{:href => "#", :class => "btn btn-default"} iPad
-              %li
-                %a{:href => "#", :class => "btn btn-default"} wireframe
-    .col-sm-4.col-md-3.proto-content
-      .thumbnail
-        %a{:href => ""}
-          = image_tag("sample.png")
-          .caption
-            %h3 Salvation Army on iPad App Wireframe
-            .proto-meta
-              .proto-date
-                Apr 26
-            %ul.proto-tag-list.list-inline
-              %li
-                %a{:href => "#", :class => "btn btn-default"} iPad
-              %li
-                %a{:href => "#", :class => "btn btn-default"} wireframe
-    .col-sm-4.col-md-3.proto-content
-      .thumbnail
-        %a{:href => ""}
-          = image_tag("sample.png")
-          .caption
-            %h3 Salvation Army on iPad App Wireframe
-            .proto-meta
-              .proto-date
-                Apr 26
-            %ul.proto-tag-list.list-inline
-              %li
-                %a{:href => "#", :class => "btn btn-default"} iPad
-              %li
-                %a{:href => "#", :class => "btn btn-default"} wireframe
-    .col-sm-4.col-md-3.proto-content
-      .thumbnail
-        %a{:href => ""}
-          = image_tag("sample.png")
-          .caption
-            %h3 Salvation Army on iPad App Wireframe
-            .proto-meta
-              .proto-date
-                Apr 26
-            %ul.proto-tag-list.list-inline
-              %li
-                %a{:href => "#", :class => "btn btn-default"} iPad
-              %li
-                %a{:href => "#", :class => "btn btn-default"} wireframe
+    = render partial: 'prototypes/prototype', collection: @prototypes
+
 .text-center
-  %ul.pagination
-    %li.disabled
-      %a{"aria-label" => "Previous", :href => "#"}
-        %span{"aria-hidden" => "true"} «
-    %li.active
-      %a{:href => "#"}
-        1
-        %span.sr-only (current)
-    %li
-      %a{:href => "#"} 2
-    %li
-      %a{:href => "#"} 3
-    %li
-      %a{:href => "#"} 4
-    %li
-      %a{:href => "#"} 5
-    %li
-      %a{"aria-label" => "Next", :href => "#"}
-        %span{"aria-hidden" => "true"} »
+  = paginate(@prototypes)
+
