fix some for review

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,8 +2,7 @@
   %header.user-nav
     .media
       .media-left
-        = link_to user_path(@user) do
-          = image_tag @user.avator, width: "64px", height: "64px", alt: "#{@user.nickname}", class: "media-object"
+        = link_to (image_tag @user.avator, width: "64px", height: "64px", alt: "#{@user.nickname}", class: "media-object"), user_path(@user)
       .media-body
         %h4#top-aligned-media.media-heading
           = @user.nickname
