--- a/app/views/prototypes/new.html.haml
+++ b/app/views/prototypes/new.html.haml
@@ -11,17 +11,19 @@
         .row
           = f.fields_for :prototype_images do |p|
             .col-md-12
-              .cover-image-upload
+              .cover-image-upload.img_input
                 = p.file_field :name
                 = p.hidden_field :status, value: :main
+                = image_tag "", width: "100%", height: "100%", style: "display: none;"
             .col-md-12
               %ul.proto-sub-list.list-group
                 - 3.times do |i|
                   = f.fields_for :prototype_images do |p|
                     %li.list-group-item.col-md-4
-                      .image-upload
+                      .image-upload.img_input
                         = p.file_field :name
                         = p.hidden_field :status, value: :sub
+                        = image_tag "", width: "100%", height: "100%", style: "display: none;"
                     - if i == 2
                       %li.list-group-item.col-md-4{ style: "display:none;" }
                         .image-upload-plus
