[update] sort popular proto by the number of likes

--- a/app/views/prototypes/prototypes/index.html.haml
+++ b/app/views/prototypes/prototypes/index.html.haml
@@ -3,4 +3,4 @@
   .row
     = render partial: '/prototypes/prototype', collection: @prototypes
 .text-center
-  = paginate(@prototypes)
+  = paginate(@prototype_pagination)
