--- a/app/views/prototypes/prototypes/new.html.haml
+++ b/app/views/prototypes/prototypes/new.html.haml
@@ -25,7 +25,7 @@
                         = p.hidden_field :status, value: :sub
                         = image_tag "", width: "100%", height: "100%", style: "display: none;"
                     - if i == 2
-                      %li.list-group-item.col-md-4{ style: "display:none;" }
+                      %li.list-group-item.col-md-4.list-group-item-plus
                         .image-upload-plus
                           %span +
       .row.proto-description
