--- a/app/assets/stylesheets/protospace.css.scss
+++ b/app/assets/stylesheets/protospace.css.scss
@@ -603,6 +603,19 @@ body {
   z-index: 1030;
 }
 
+.user-new .user-image #user_avatar {
+    display: block;
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+}
+
 footer p{
   text-align: center;
 }
