--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -7,7 +7,8 @@
         .user-name_image.row
           .user-name.col-md-10
             =f.text_field :nickname, placeholder: "Username"
-          .user-image.col-md-2
+          .user-image.col-md-2{class: "img_preview"}
+            = image_tag "", width: "100%", height: "100%", id: "user_avatar", class: "media-object", style: "display: none;"
             %button.btn.btn-primary Add image
             =f.file_field :avator
         =f.email_field :email, placeholder: "E-Mail", class: "user-email"
