--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -6,8 +6,9 @@
         .user-name_image.row
           .user-name.col-md-10
             = f.text_field :nickname, placeholder: "Username"
-          .user-image.col-md-2
-            %button.btn.btn-primary Add image
+          .user-image.col-md-2{class: "img_preview"}
+            = image_tag @user.avator, width: "100%", height: "100%", id: "user_avatar", class: "media-object"
+            %button.btn.btn-primary Edit image
             = f.file_field :avator
       .col-md-12
         %h4 Member of
