--- a/app/views/prototypes/prototypes/show.html.haml
+++ b/app/views/prototypes/prototypes/show.html.haml
@@ -13,11 +13,20 @@
               = @prototype.user.work
 
     .col-md-6.text-right
-      %button.btn.btn-default{ class: (@like_status) ? "decrement-button" : "increment-button", data: { id: @prototype.id } }
-        = image_tag("#{@like_status ? 'icon_heart_red.svg' : 'icon_heart.svg'}")
-        Like
-        %span.num
-          = @like_count
+      - if user_signed_in?
+        %button.btn.btn-default{ class: (@like_status) ? "decrement-button" : "increment-button", data: { id: @prototype.id } }
+          = image_tag("#{@like_status ? 'icon_heart_red.svg' : 'icon_heart.svg'}")
+          Like
+          %span.num
+            = @like_count
+      -else
+        = link_to user_session_path do
+          %button.btn.btn-default
+            = image_tag("#{@like_status ? 'icon_heart_red.svg' : 'icon_heart.svg'}")
+            Like
+            %span.num
+              = @like_count
+
   .row
     .col-md-9
       = image_tag main_image(@prototype), class: 'img-responsive'
